--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,4 +2,13 @@
   padding-top: 0px;
 }
 
+.comment-reply {
+  display: none;
+}
+
+.fake-link {
+  color: blue;
+  cursor: pointer;
+}
+
 /*# sourceMappingURL=app.css.map */
